Issue #15900: Fixed reference leak in PyUnicode_TranslateCharmap()